Repaired issue where trophy room background over extended past border (#313)
* Removed unneccessary img element

* Updated trophy room button to repair out of bounds issue

* Repaired text alignment issue for smaller screens

* Moved Child Footer file and added component where necessary (#314)

* Bug/ Remove log from point share, fix warnings from choose child child modal and parent dashboard.   (#311)

* Add unique key for children in .map function in Hud.js (#312)

* add menu to header (#322)

great catch Barry!

* fixed the styling of footer in the Homepage (#325)

* Updated trophy room button to repair out of bounds issue

--- a/src/styles/less/ChildDashboard.less
+++ b/src/styles/less/ChildDashboard.less
@@ -117,6 +117,7 @@
     @media @tablet, @mobile {
       padding: 0%;
       font-size: 2.5rem;
+      text-align: center;
     }
   }
 
@@ -141,20 +142,15 @@
     }
   }
   .trophy-room-button {
+    background: url('../../assets/images/gamemodeimg/explosion.png') no-repeat;
+    background-size: contain;
+    background-position: center;
+    background-color: @bright-sun;
+    opacity: 100%;
+    cursor: pointer;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    background: @bright-sun;
-  }
-
-  .trophy-room-button img {
-    position: relative;
-  }
-
-  .trophy-room-button p {
-    position: absolute;
-    z-index: 1;
+    justify-content: center;
   }
 
   .multi-btn {
@@ -271,11 +267,6 @@
 
 .trophy-room:hover {
   opacity: 100%;
-
-  img {
-    max-width: 100%;
-    max-height: 100%;
-  }
 }
 
 .leaderboard:hover {
@@ -290,8 +281,7 @@
 .trophy-room-button:hover {
   opacity: 75%;
 
-  img {
-    max-width: 100%;
-    max-height: 100%;
+  p {
+    font-size: 4.5rem;
   }
 }
